# neuroCompositor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mir-compositor  run.sh
compSrcs/spotlightGtk/: Makefile  main.cpp  row.cc  row.h  spotlight  win.cc  win.h
compSrcs/taskbarGtk/: Makefile  elevate.sh  neuParser.h  notifTest.cpp  taskbarGtk  test  test.cpp
compSrcs/taskbarGtk/src/: btn.cc  main.cpp  row.cc  win.cc
compSrcs/taskbarGtk/src/headers/: btn.h  row.h  win.h
compSrcs/wallpaperGtk/: Makefile  wallpaperGtk
compSrcs/wallpaperGtk/src/: main.cpp  win.cc
compSrcs/wallpaperGtk/src/headers/: win.h
