cmake_minimum_required(VERSION 3.16)
project(mir-compositor)
set(CMAKE_CXX_STANDARD 23)
include(FindPkgConfig)
pkg_check_modules(MIRAL miral REQUIRED IMPORTED_TARGET)
pkg_check_modules(GTKMM REQUIRED IMPORTED_TARGET gtkmm-4.0)
pkg_check_modules(XKBCOMMON REQUIRED IMPORTED_TARGET xkbcommon)
add_executable(mir-compositor main.cpp)
target_link_libraries(mir-compositor PkgConfig::MIRAL PkgConfig::GTKMM PkgConfig::XKBCOMMON)
